Fixed hamburger z-index

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav {
 	.hamburger {
 		display: block;
 		position: relative;
-		z-index: 1;
+		z-index: 999999;
 
 		margin-left: auto;
 		margin-right: 0;
@@ -125,7 +125,7 @@ nav {
 		flex-direction: column;
 		transform: translateX(100%);
 		transition: all 0.25s linear;
-		z-index: 9999999;
+		z-index: 9999;
 
 		opacity: 00.57;
 		/* visibility: hidden; */
